# misinfo-env

./: .env.example  .gitignore  Dockerfile  README.md  baseline_policy.py  generate_data.py  inference.py  meta-hack.md  openenv.yaml  pyproject.toml  requirements.txt  server.py  test_env.py
environment/: __init__.py  env.py  graph.py  models.py  scoring.py  spread.py
environment/data/: network_easy.json  network_hard.json  network_medium.json
environment/graders/: __init__.py  grader1.py  grader2.py  grader3.py
environment/tasks/: __init__.py  task1_detection.py  task2_tracing.py  task3_containment.py
server/: __main__.py  app.py
tests/: test_baseline_policy.py  test_env.py  test_inference.py
