[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "misinfo-containment-env"
version = "2.0.0"
description = "Misinformation Containment Network — OpenEnv Environment"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "openenv-core>=0.2.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "networkx>=3.0.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["environment", "server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
